--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,8 @@
 appname = pinnapi
 httpport = 8080
-runmode = dev
+runmode = prod
 autorender = false
 copyrequestbody = true
-EnableDocs = true
-beego.BConfig.Listen.EnableAdmin = true
+enabledocs = true
+enableadmin = true
+flashname = pinnapi
